# python-project-lvl1

./: Makefile  README.md  pyproject.toml
.github/workflows/: flake8-check.yml
brain_games/: cli.py  functions.py
brain_games/scripts/: brain_even.py  brain_gamess.py
