[tool.poetry]
packages = [
  { include = "brain_games" },
]

name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Stanislav <yastva3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_gamess:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
